[project]
name = "gitkit"
version = "0.1.5"
description = "Small Git helper"
authors = [{ name = "Mike Bijl", email = "bijlmike3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gitkit = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
